OCD: FIX MISALIGNMENT DUE TO SCROLLBAR

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -129,6 +129,7 @@
 
 	html {
 		background: var(--background);
+		scrollbar-gutter: stable;
 	}
 	
 	[data-theme='dark'] html {
